--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -12,21 +12,21 @@
 <h1 class="bar">All&nbsp;Classes</h1>
 <div class="indexContainer">
 <ul>
-<li><a href="model/CharacterSheet.html" title="class in model" target="classFrame">CharacterSheet</a></li>
-<li><a href="model/ClassBitmask.html" title="class in model" target="classFrame">ClassBitmask</a></li>
-<li><a href="controller/CombatRound.html" title="class in controller" target="classFrame">CombatRound</a></li>
-<li><a href="controller/Controller.html" title="class in controller" target="classFrame">Controller</a></li>
-<li><a href="model/DamageMultiplier.html" title="class in model" target="classFrame">DamageMultiplier</a></li>
-<li><a href="model/Discipline.html" title="class in model" target="classFrame">Discipline</a></li>
-<li><a href="EQSIM.html" title="class in &lt;Unnamed&gt;" target="classFrame">EQSIM</a></li>
-<li><a href="controller/FileHandling.html" title="class in controller" target="classFrame">FileHandling</a></li>
-<li><a href="view/LayerSelector.html" title="class in view" target="classFrame">LayerSelector</a></li>
-<li><a href="model/Mob.html" title="class in model" target="classFrame">Mob</a></li>
-<li><a href="model/Resists.html" title="class in model" target="classFrame">Resists</a></li>
-<li><a href="model/SpecialAttack.html" title="class in model" target="classFrame">SpecialAttack</a></li>
-<li><a href="model/Spell.html" title="class in model" target="classFrame">Spell</a></li>
-<li><a href="model/String_ID.html" title="class in model" target="classFrame">String_ID</a></li>
-<li><a href="model/Weapon.html" title="class in model" target="classFrame">Weapon</a></li>
+<li><a href="model/CharacterSheet.html" title="class in main.model" target="classFrame">CharacterSheet</a></li>
+<li><a href="model/ClassBitmask.html" title="class in main.model" target="classFrame">ClassBitmask</a></li>
+<li><a href="controller/CombatRound.html" title="class in main.controller" target="classFrame">CombatRound</a></li>
+<li><a href="controller/Controller.html" title="class in main.controller" target="classFrame">Controller</a></li>
+<li><a href="model/DamageMultiplier.html" title="class in main.model" target="classFrame">DamageMultiplier</a></li>
+<li><a href="model/Discipline.html" title="class in main.model" target="classFrame">Discipline</a></li>
+<li><a href="EQSIM.html" title="class in &lt;Unnamed&gt;" target="classFrame">main.EQSIM</a></li>
+<li><a href="controller/FileHandling.html" title="class in main.controller" target="classFrame">FileHandling</a></li>
+<li><a href="view/LayerSelector.html" title="class in main.view" target="classFrame">LayerSelector</a></li>
+<li><a href="model/Mob.html" title="class in main.model" target="classFrame">Mob</a></li>
+<li><a href="model/Resists.html" title="class in main.model" target="classFrame">Resists</a></li>
+<li><a href="model/SpecialAttack.html" title="class in main.model" target="classFrame">SpecialAttack</a></li>
+<li><a href="model/Spell.html" title="class in main.model" target="classFrame">Spell</a></li>
+<li><a href="model/String_ID.html" title="class in main.model" target="classFrame">String_ID</a></li>
+<li><a href="model/Weapon.html" title="class in main.model" target="classFrame">Weapon</a></li>
 </ul>
 </div>
 </body>
