--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -12,21 +12,21 @@
 <h1 class="bar">All&nbsp;Classes</h1>
 <div class="indexContainer">
 <ul>
-<li><a href="model/CharacterSheet.html" title="class in model">CharacterSheet</a></li>
-<li><a href="model/ClassBitmask.html" title="class in model">ClassBitmask</a></li>
-<li><a href="controller/CombatRound.html" title="class in controller">CombatRound</a></li>
-<li><a href="controller/Controller.html" title="class in controller">Controller</a></li>
-<li><a href="model/DamageMultiplier.html" title="class in model">DamageMultiplier</a></li>
-<li><a href="model/Discipline.html" title="class in model">Discipline</a></li>
-<li><a href="EQSIM.html" title="class in &lt;Unnamed&gt;">EQSIM</a></li>
-<li><a href="controller/FileHandling.html" title="class in controller">FileHandling</a></li>
-<li><a href="view/LayerSelector.html" title="class in view">LayerSelector</a></li>
-<li><a href="model/Mob.html" title="class in model">Mob</a></li>
-<li><a href="model/Resists.html" title="class in model">Resists</a></li>
-<li><a href="model/SpecialAttack.html" title="class in model">SpecialAttack</a></li>
-<li><a href="model/Spell.html" title="class in model">Spell</a></li>
-<li><a href="model/String_ID.html" title="class in model">String_ID</a></li>
-<li><a href="model/Weapon.html" title="class in model">Weapon</a></li>
+<li><a href="model/CharacterSheet.html" title="class in main.model">CharacterSheet</a></li>
+<li><a href="model/ClassBitmask.html" title="class in main.model">ClassBitmask</a></li>
+<li><a href="controller/CombatRound.html" title="class in main.controller">CombatRound</a></li>
+<li><a href="controller/Controller.html" title="class in main.controller">Controller</a></li>
+<li><a href="model/DamageMultiplier.html" title="class in main.model">DamageMultiplier</a></li>
+<li><a href="model/Discipline.html" title="class in main.model">Discipline</a></li>
+<li><a href="EQSIM.html" title="class in &lt;Unnamed&gt;">main.EQSIM</a></li>
+<li><a href="controller/FileHandling.html" title="class in main.controller">FileHandling</a></li>
+<li><a href="view/LayerSelector.html" title="class in main.view">LayerSelector</a></li>
+<li><a href="model/Mob.html" title="class in main.model">Mob</a></li>
+<li><a href="model/Resists.html" title="class in main.model">Resists</a></li>
+<li><a href="model/SpecialAttack.html" title="class in main.model">SpecialAttack</a></li>
+<li><a href="model/Spell.html" title="class in main.model">Spell</a></li>
+<li><a href="model/String_ID.html" title="class in main.model">String_ID</a></li>
+<li><a href="model/Weapon.html" title="class in main.model">Weapon</a></li>
 </ul>
 </div>
 </body>
