--- a/overview-tree.html
+++ b/overview-tree.html
@@ -72,9 +72,9 @@
 <h1 class="title">Hierarchy For All Packages</h1>
 <span class="packageHierarchyLabel">Package Hierarchies:</span>
 <ul class="horizontal">
-<li><a href="controller/package-tree.html">controller</a>, </li>
-<li><a href="model/package-tree.html">model</a>, </li>
-<li><a href="view/package-tree.html">view</a></li>
+<li><a href="controller/package-tree.html">main.controller</a>, </li>
+<li><a href="model/package-tree.html">main.model</a>, </li>
+<li><a href="view/package-tree.html">main.view</a></li>
 </ul>
 </div>
 <div class="contentContainer">
@@ -82,21 +82,21 @@
 <ul>
 <li type="circle">java.lang.Object
 <ul>
-<li type="circle">model.<a href="model/CharacterSheet.html" title="class in model"><span class="typeNameLink">CharacterSheet</span></a></li>
-<li type="circle">model.<a href="model/ClassBitmask.html" title="class in model"><span class="typeNameLink">ClassBitmask</span></a></li>
-<li type="circle">controller.<a href="controller/CombatRound.html" title="class in controller"><span class="typeNameLink">CombatRound</span></a></li>
-<li type="circle">controller.<a href="controller/Controller.html" title="class in controller"><span class="typeNameLink">Controller</span></a></li>
-<li type="circle">model.<a href="model/DamageMultiplier.html" title="class in model"><span class="typeNameLink">DamageMultiplier</span></a></li>
-<li type="circle">model.<a href="model/Discipline.html" title="class in model"><span class="typeNameLink">Discipline</span></a></li>
-<li type="circle"><a href="EQSIM.html" title="class in &lt;Unnamed&gt;"><span class="typeNameLink">EQSIM</span></a></li>
-<li type="circle">controller.<a href="controller/FileHandling.html" title="class in controller"><span class="typeNameLink">FileHandling</span></a></li>
-<li type="circle">view.<a href="view/LayerSelector.html" title="class in view"><span class="typeNameLink">LayerSelector</span></a> (implements java.awt.event.KeyListener)</li>
-<li type="circle">model.<a href="model/Mob.html" title="class in model"><span class="typeNameLink">Mob</span></a></li>
-<li type="circle">model.<a href="model/Resists.html" title="class in model"><span class="typeNameLink">Resists</span></a></li>
-<li type="circle">model.<a href="model/SpecialAttack.html" title="class in model"><span class="typeNameLink">SpecialAttack</span></a></li>
-<li type="circle">model.<a href="model/Spell.html" title="class in model"><span class="typeNameLink">Spell</span></a></li>
-<li type="circle">model.<a href="model/String_ID.html" title="class in model"><span class="typeNameLink">String_ID</span></a></li>
-<li type="circle">model.<a href="model/Weapon.html" title="class in model"><span class="typeNameLink">Weapon</span></a></li>
+<li type="circle">main.model.<a href="model/CharacterSheet.html" title="class in main.model"><span class="typeNameLink">CharacterSheet</span></a></li>
+<li type="circle">main.model.<a href="model/ClassBitmask.html" title="class in main.model"><span class="typeNameLink">ClassBitmask</span></a></li>
+<li type="circle">main.test.controller.<a href="controller/CombatRound.html" title="class in main.controller"><span class="typeNameLink">CombatRound</span></a></li>
+<li type="circle">main.test.controller.<a href="controller/Controller.html" title="class in main.controller"><span class="typeNameLink">Controller</span></a></li>
+<li type="circle">main.model.<a href="model/DamageMultiplier.html" title="class in main.model"><span class="typeNameLink">DamageMultiplier</span></a></li>
+<li type="circle">main.model.<a href="model/Discipline.html" title="class in main.model"><span class="typeNameLink">Discipline</span></a></li>
+<li type="circle"><a href="EQSIM.html" title="class in &lt;Unnamed&gt;"><span class="typeNameLink">main.EQSIM</span></a></li>
+<li type="circle">main.test.controller.<a href="controller/FileHandling.html" title="class in main.controller"><span class="typeNameLink">FileHandling</span></a></li>
+<li type="circle">main.view.<a href="view/LayerSelector.html" title="class in main.view"><span class="typeNameLink">LayerSelector</span></a> (implements java.awt.event.KeyListener)</li>
+<li type="circle">main.model.<a href="model/Mob.html" title="class in main.model"><span class="typeNameLink">Mob</span></a></li>
+<li type="circle">main.model.<a href="model/Resists.html" title="class in main.model"><span class="typeNameLink">Resists</span></a></li>
+<li type="circle">main.model.<a href="model/SpecialAttack.html" title="class in main.model"><span class="typeNameLink">SpecialAttack</span></a></li>
+<li type="circle">main.model.<a href="model/Spell.html" title="class in main.model"><span class="typeNameLink">Spell</span></a></li>
+<li type="circle">main.model.<a href="model/String_ID.html" title="class in main.model"><span class="typeNameLink">String_ID</span></a></li>
+<li type="circle">main.model.<a href="model/Weapon.html" title="class in main.model"><span class="typeNameLink">Weapon</span></a></li>
 </ul>
 </li>
 </ul>
