--- a/package-summary.html
+++ b/package-summary.html
@@ -71,7 +71,7 @@
 </tr>
 <tbody>
 <tr class="altColor">
-<td class="colFirst"><a href="EQSIM.html" title="class in &lt;Unnamed&gt;">EQSIM</a></td>
+<td class="colFirst"><a href="EQSIM.html" title="class in &lt;Unnamed&gt;">main.EQSIM</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
 </tbody>
