--- a/controller/FileHandling.html
+++ b/controller/FileHandling.html
@@ -48,11 +48,11 @@ var activeTableTab = "activeTableTab";
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../controller/Controller.html" title="class in controller"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../controller/Controller.html" title="class in main.controller"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
 <li>Next&nbsp;Class</li>
 </ul>
 <ul class="navList">
-<li><a href="../index.html?controller/FileHandling.html" target="_top">Frames</a></li>
+<li><a href="../index.html?main.test.controller/FileHandling.html" target="_top">Frames</a></li>
 <li><a href="FileHandling.html" target="_top">No&nbsp;Frames</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_top">
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">controller</div>
+<div class="subTitle">main.controller</div>
 <h2 title="Class FileHandling" class="title">Class FileHandling</h2>
 </div>
 <div class="contentContainer">
@@ -99,7 +99,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>controller.FileHandling</li>
+<li>main.controller.FileHandling</li>
 </ul>
 </li>
 </ul>
@@ -336,11 +336,11 @@ extends java.lang.Object</pre>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../controller/Controller.html" title="class in controller"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../controller/Controller.html" title="class in main.controller"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
 <li>Next&nbsp;Class</li>
 </ul>
 <ul class="navList">
-<li><a href="../index.html?controller/FileHandling.html" target="_top">Frames</a></li>
+<li><a href="../index.html?main.test.controller/FileHandling.html" target="_top">Frames</a></li>
 <li><a href="FileHandling.html" target="_top">No&nbsp;Frames</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_bottom">
