--- a/model/String_ID.html
+++ b/model/String_ID.html
@@ -48,11 +48,11 @@ var activeTableTab = "activeTableTab";
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../model/Spell.html" title="class in model"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../model/Weapon.html" title="class in model"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../model/Spell.html" title="class in main.model"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../model/Weapon.html" title="class in main.model"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
-<li><a href="../index.html?model/String_ID.html" target="_top">Frames</a></li>
+<li><a href="../index.html?main.model/String_ID.html" target="_top">Frames</a></li>
 <li><a href="String_ID.html" target="_top">No&nbsp;Frames</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_top">
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">model</div>
+<div class="subTitle">main.model</div>
 <h2 title="Class String_ID" class="title">Class String_ID</h2>
 </div>
 <div class="contentContainer">
@@ -99,7 +99,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>model.String_ID</li>
+<li>main.model.String_ID</li>
 </ul>
 </li>
 </ul>
@@ -256,11 +256,11 @@ extends java.lang.Object</pre>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../model/Spell.html" title="class in model"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../model/Weapon.html" title="class in model"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../model/Spell.html" title="class in main.model"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../model/Weapon.html" title="class in main.model"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
-<li><a href="../index.html?model/String_ID.html" target="_top">Frames</a></li>
+<li><a href="../index.html?main.model/String_ID.html" target="_top">Frames</a></li>
 <li><a href="String_ID.html" target="_top">No&nbsp;Frames</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_bottom">
