--- a/overview-frame.html
+++ b/overview-frame.html
@@ -14,9 +14,9 @@
 <h2 title="Packages">Packages</h2>
 <ul title="Packages">
 <li><a href="package-frame.html" target="packageFrame">&lt;unnamed package&gt;</a></li>
-<li><a href="controller/package-frame.html" target="packageFrame">controller</a></li>
-<li><a href="model/package-frame.html" target="packageFrame">model</a></li>
-<li><a href="view/package-frame.html" target="packageFrame">view</a></li>
+<li><a href="controller/package-frame.html" target="packageFrame">main.controller</a></li>
+<li><a href="model/package-frame.html" target="packageFrame">main.model</a></li>
+<li><a href="view/package-frame.html" target="packageFrame">main.view</a></li>
 </ul>
 </div>
 <p>&nbsp;</p>
