--- a/overview-summary.html
+++ b/overview-summary.html
@@ -77,15 +77,15 @@
 </tr>
 <tbody>
 <tr class="rowColor">
-<td class="colFirst"><a href="controller/package-summary.html">controller</a></td>
+<td class="colFirst"><a href="controller/package-summary.html">main.controller</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><a href="model/package-summary.html">model</a></td>
+<td class="colFirst"><a href="model/package-summary.html">main.model</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><a href="view/package-summary.html">view</a></td>
+<td class="colFirst"><a href="view/package-summary.html">main.view</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
 </tbody>
