--- a/package-frame.html
+++ b/package-frame.html
@@ -13,7 +13,7 @@
 <div class="indexContainer">
 <h2 title="Classes">Classes</h2>
 <ul title="Classes">
-<li><a href="EQSIM.html" title="class in &lt;Unnamed&gt;" target="classFrame">EQSIM</a></li>
+<li><a href="EQSIM.html" title="class in &lt;Unnamed&gt;" target="classFrame">main.EQSIM</a></li>
 </ul>
 </div>
 </body>
