--- a/package-tree.html
+++ b/package-tree.html
@@ -80,7 +80,7 @@
 <ul>
 <li type="circle">java.lang.Object
 <ul>
-<li type="circle"><a href="EQSIM.html" title="class in &lt;Unnamed&gt;"><span class="typeNameLink">EQSIM</span></a></li>
+<li type="circle"><a href="EQSIM.html" title="class in &lt;Unnamed&gt;"><span class="typeNameLink">main.EQSIM</span></a></li>
 </ul>
 </li>
 </ul>
